--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Oussema Ajmi <ldrajmioussema2@gmail.com>
-Mohammed chedli <>
+Mohammed chedli <mohamed.chedliiy@gmail.com>
